# SumoQuote_test

./: README.md  pyproject.toml
test/: test_compliting_profile.py  test_sign_up.py
test/__pycache__/: test_compliting_profile.cpython-311-pytest-7.4.0.pyc.24604
